@@ -1,3 +1,7 @@
+2015-03-21  Perry McFarlane  <perry_m@mail.com>
+* gtia.c: Improve player/playfield collisions for NEW_CYCLE_EXACT
+
+
 2015-03-20  Christian Groessler  <chris@groessler.org>
 * dc/atari_dc.c: Fix problem when trying to leave the on-screen keyboard
   emulation menu when an override for the DC 'B' button is configured.
